Fixed menu contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3531,7 +3531,7 @@ var {
 		-ms-transition: -ms-transform 0.3s ease;
 		transition: transform 0.3s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #368780;
+		background: #317A74;
 		color: #f6f6f6;
 		height: 100%;
 		max-width: 80%;
